# AVIO

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  Cargo.toml  Cross.toml  biome.json  eslint.config.mjs  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  typed-router.d.ts  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: apt-packages-linux.txt
.github/badges/: main-bun.json  main-tauri.json  main-version.json  main-webkitgtk.json
.github/workflows/: _diag.yml  build.yml  dependecies.yml  gstreamer-assets.yml  maintenance.yml  notification.yml  release.yml  typecheck.yml
docker/: README.md  aarch64-native-build.Dockerfile  cross-aarch64-unknown-linux-gnu.Dockerfile
scripts/: build-avio-compositor-sidecar.ts  build-gst-host-sidecar.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/assets/gstreamer/linux-arm64/lib/: libexpat.so.1.12.1  libgraphene-1.0.so.0.1000.8  libgstallocators-1.0.so.0.2803.0  libgstcodecs-1.0.so.0.2803.0  libgstcontroller-1.0.so.0.2803.0  libgstgl-1.0.so.0.2803.0  liborc-0.4.so.0.42.0  libpcre2-8.so.0.14.0  libpng16.so.16.58.0  libselinux.so.1  libvorbisenc.so.2.0.12
src-tauri/assets/gstreamer/linux-arm64/libexec/gstreamer-1.0/: gst-plugin-scanner
src-tauri/assets/gstreamer/linux-x64/lib/: libgstapp-1.0.so.0.2803.0  libgstcodecparsers-1.0.so.0.2803.0  libgstcodecs-1.0.so.0.2803.0  libgstfft-1.0.so.0.2803.0  libgstpbutils-1.0.so.0.2803.0  libgstreamer-1.0.so.0.2803.0  libgstva-1.0.so.0.2803.0  liborc-0.4.so.0.42.0  libpng16.so.16.58.0  libz.so.1.3.2
src-tauri/assets/gstreamer/linux-x64/libexec/gstreamer-1.0/: gst-plugin-scanner
src-tauri/assets/linux/: 99-AVIO.rules.template  avio.apparmor  nl.thatzokay.avio.metainfo.xml
src-tauri/assets/mac/: entitlements.mac.plist
src-tauri/capabilities/: default.json
src-tauri/crates/aa-proto/: Cargo.toml  build.rs
src-tauri/crates/aa-proto/protos/aap_protobuf/channel/control/: GoogleDiagnosticsVendorExtensionMessageId.proto
src-tauri/crates/aa-proto/src/: lib.rs
src-tauri/crates/avio-compositor/: avio-compositor.c  meson.build
src-tauri/crates/avio-compositor/subprojects/: libxkbcommon.wrap  pixman.wrap  wayland-protocols.wrap  wayland.wrap  wlroots.wrap
src-tauri/crates/avio-compositor/subprojects/packagefiles/: wlroots-avio.patch
src-tauri/crates/gst-video/: Cargo.toml  build.rs
src-tauri/crates/gst-video/src/: lib.rs
src-tauri/crates/gst-video/src/native/: gst_video.cc  gst_video.h  gst_video_mac.mm  gst_video_win.cc
src-tauri/crates/tauri-plugin-rtl-sdr/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-rtl-sdr/permissions/: default.toml  detect-rtl-sdr.toml
src-tauri/crates/tauri-plugin-rtl-sdr/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-rtl-sdr/permissions/autogenerated/commands/: detect_rtl_sdr.toml
src-tauri/crates/tauri-plugin-rtl-sdr/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-rtl-sdr/src/: lib.rs  rtl_sdr_detection.rs
src-tauri/crates/tauri-plugin-rtl-sdr/src/fm/: fm_radio.rs  mod.rs
src-tauri/crates/welle-io-sys/: Cargo.toml  build.rs
src-tauri/crates/welle-io-sys/src/: lib.rs  shim.cpp  shim.h
src-tauri/media/: sample.h264
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: audio_device_enumerator.rs  audio_downsample.rs  audio_output.rs  gstreamer.rs  microphone.rs  mod.rs
src-tauri/src/projection/driver/: mod.rs
src-tauri/src/projection/driver/aa/: commands.rs  mod.rs  session_handle.rs  wired_driver.rs
src-tauri/src/projection/driver/aa/bt/: aa-bluetooth.py  config.py  wifi_ap.py
src-tauri/src/projection/driver/aa/stack/: constants.rs  mod.rs
src-tauri/src/projection/driver/aa/stack/aoap/: constants.rs  handshake.rs  mod.rs
src-tauri/src/projection/driver/aa/stack/channels/: audio_channel.rs  input_channel.rs  media_info_channel.rs  mic_channel.rs  mod.rs  navigation_channel.rs  proto_enc.rs  video_channel.rs
src-tauri/src/projection/driver/aa/stack/crypto/: cert.rs  mod.rs  tls_engine.rs
src-tauri/src/projection/driver/aa/stack/frame/: codec.rs
src-tauri/src/projection/driver/aa/stack/session/: config.rs  control_channel.rs  mod.rs  service_discovery.rs  session.rs
src-tauri/src/projection/driver/aa/stack/transport/: mod.rs  tcp_server.rs  usb_aoap_bridge.rs
src-tauri/src/projection/driver/dongle/: dongle_driver.rs  mod.rs
src-tauri/src/radio/: fm_radio_service.rs  mod.rs  radio_service.rs
src-tauri/src/screen/: mod.rs
src-tauri/src/shared/: audio_decode.rs  mod.rs
src-tauri/src/usb/: constants.rs  helpers.rs  mod.rs  udev_rule.rs  usb_service.rs
src-tauri/src/video/: compositor_bootstrap.rs  gst_host.rs  gst_host_linux.rs  gst_video.rs  gst_video_linux.rs  mod.rs
src/assets/icons/: android-auto.png.bak
src/components/: BottomBar.vue  SlidingCard.vue  TopBar.vue
src/composables/: useM3Theme.ts
src/pages/: aa-touch.vue  index.vue  radio.vue  settings.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/store/: statusStore.ts
