[workspace]
resolver = "2"
# avio-compositor is a meson/C project (no Cargo.toml), so it's listed explicitly rather than
# via a "src-tauri/crates/*" glob (which would require every crates/* dir to be a Cargo crate).
members = [
    "src-tauri/crates/aa-proto",
    "src-tauri/crates/gst-video",
    "src-tauri/crates/tauri-plugin-rtl-sdr",
    "src-tauri",
]

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

# FM demod/RDS decode is far too slow to keep up with the RTL-SDR's real-time
# sample rate when compiled unoptimized. rubato (resampling, used internally by
# AdaptiveResampler) and biquad (filters, used internally by desperado's
# Decimator/DeemphasisFilter) do the actual heavy per-sample math and closed
# the whole gap on their own. fmradio/desperado/num-complex and our own plugin
# crate (below) are cheap insurance for the per-sample Complex<f32> glue code
# around them. Keeps debug builds of our own code fast to compile while still
# getting real-time audio.
[profile.dev.package.rubato]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.biquad]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.num-complex]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.fmradio]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.desperado]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

# FmDemod::process() itself (IQ-to-complex conversion, the per-sample map/collect
# chains) lives directly in this workspace crate, not a dependency — profile
# overrides above don't reach it, so it needs its own entry.
[profile.dev.package.tauri-plugin-rtl-sdr]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false
